--- a/app/general/templates/general/index.html
+++ b/app/general/templates/general/index.html
@@ -63,7 +63,7 @@
 <div class="container">
 
 <header class="section-heading">
-  <h3 class="section-title">Popular products</h3>
+  <h3 class="section-title">Produtos populares</h3>
 </header><!-- sect-heading -->
 
   
