Commiti Alteração - Alterei Vendas rapidas no index

--- a/app/general/templates/general/index.html
+++ b/app/general/templates/general/index.html
@@ -24,7 +24,7 @@
     <figure class="item-feature">
       <span class="text-primary"><i class="fa fa-2x fa-truck"></i></span>
       <figcaption class="pt-3">
-        <h5 class="title">Fast delivery</h5>
+        <h5 class="title">Vendas Rápidas</h5>
         <p>Dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore </p>
       </figcaption>
