--- a/app/auth/templates/auth/forgot_password.html
+++ b/app/auth/templates/auth/forgot_password.html
@@ -7,8 +7,8 @@
               <div class="panel-body">
                 <div class="text-center">
                   <h3><i class="fa fa-lock fa-4x"></i></h3>
-                  <h2 class="text-center">Forgot Password?</h2>
-                  <p>You can reset your password here.</p>
+                  <h2 class="text-center">Esqueceu sua senha?</h2>
+                  <p>Você pode resetar sua senha aqui.</p>
                   <div class="panel-body">
     
                     <form id="register-form" role="form" autocomplete="off" class="form" method="post">
@@ -16,11 +16,11 @@
                       <div class="form-group">
                         <div class="input-group">
                           <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                          <input id="email" name="email" placeholder="Enter email address" class="form-control"  type="email">
+                          <input id="email" name="email" placeholder="Digite o endereço de e-mail" class="form-control"  type="email">
                         </div>
                       </div>
                       <div class="form-group">
-                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
+                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Resetar senha" type="submit">
                       </div>
                       
                       <input type="hidden" class="hide" name="token" id="token" value=""> 
