--- a/app/auth/templates/auth/login.html
+++ b/app/auth/templates/auth/login.html
@@ -1,50 +1,50 @@
 {%include "base.html" %}
 <section class="section-content padding-y" style="min-height: 84vh">
-  <!-- ============================ COMPONENT LOGIN   ================================= -->
+  
   <div class="card mx-auto" style="max-width: 380px; margin-top: 100px">
     <div class="card-body">
-      <h4 class="card-title mb-4">Sign in</h4>
+      <h4 class="card-title mb-4">Login</h4>
       <form method="POST">
         {{ form.csrf_token }}
         <a href="#" class="btn btn-facebook btn-block mb-2">
-          <i class="fab fa-facebook-f"></i> &nbsp Sign in with Facebook</a
+          <i class="fab fa-facebook-f"></i> &nbsp Entre com o Facebook</a
         >
         <a href="#" class="btn btn-google btn-block mb-4">
-          <i class="fab fa-google"></i> &nbsp Sign in with Google</a
+          <i class="fab fa-google"></i> &nbsp Entre com o Google</a
         >
 
         <div class="form-group">
           {{ form.email.label }} {{ form.email(class="form-control")}}
         </div>
-        <!-- form-group// -->
+       
         <div class="form-group">
           {{ form.password.label}} {{ form.password(class="form-control")}}
         </div>
-        <!-- form-group// -->
+        
 
         <div class="form-group">
           <a href="/auth/forgot_password" class="float-right"
-            >Forgot password?</a
+            >Esqueceu sua senha?</a
           >
           <label class="float-left custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" checked="" />
-            <div class="custom-control-label">Remember</div>
+            <div class="custom-control-label">Lembra-me</div>
           </label>
         </div>
-        <!-- form-group form-check .// -->
+        
         <div class="form-group">
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </div>
-        <!-- form-group// -->
+        
       </form>
     </div>
-    <!-- card-body.// -->
+    
   </div>
-  <!-- card .// -->
+ 
 
   <p class="text-center mt-4">
-    Don't have account? <a href="/auth/register">Sign up</a>
+    Não possui conta? <a href="/auth/register">Cadastra-se</a>
   </p>
   <br /><br />
-  <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
+  
 </section>
