--- a/app/auth/templates/auth/signup.html
+++ b/app/auth/templates/auth/signup.html
@@ -3,46 +3,46 @@
 
 
 
-<!-- ========================= SECTION CONTENT ========================= -->
+
 <section class="section-content padding-y">
 
-<!-- ============================ COMPONENT REGISTER   ================================= -->
+
   <div class="card mx-auto" style="max-width:520px; margin-top:40px;">
       <article class="card-body">
-    <header class="mb-4"><h4 class="card-title">Sign up</h4></header>
+    <header class="mb-4"><h4 class="card-title">Cadastra-se</h4></header>
     <form method="POST">
         <div class="form-row">
           <div class="col form-group">
-            <label>First name</label>
+            <label>Primeiro nome</label>
               <input type="text" class="form-control" placeholder="" name="fname">
-          </div> <!-- form-group end.// -->
+          </div> 
           <div class="col form-group">
-            <label>Last name</label>
+            <label>Último nome</label>
               <input type="text" class="form-control" placeholder="" name="lname">
-          </div> <!-- form-group end.// -->
-        </div> <!-- form-row end.// -->
+          </div> 
+        </div> 
         <div class="form-group">
           <label>Email</label>
           <input type="email" class="form-control" placeholder="" name="email">
-          <small class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div> <!-- form-group end.// -->
+          <small class="form-text text-muted">Nós não compartilhamos os dados com ninguém, em proteção a lei de dados 'LGPD'.</small>
+        </div> 
         <div class="form-group">
           <label class="custom-control custom-radio custom-control-inline">
             <input class="custom-control-input" checked="" type="radio" name="gender" value="Male">
-            <span class="custom-control-label"> Male </span>
+            <span class="custom-control-label"> Masculino </span>
           </label>
           <label class="custom-control custom-radio custom-control-inline">
             <input class="custom-control-input" type="radio" name="gender" value="Female">
-            <span class="custom-control-label"> Female </span>
+            <span class="custom-control-label"> Feminino </span>
           </label>
-        </div> <!-- form-group end.// -->
+        </div> 
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label>City</label>
+            <label>Cidade</label>
             <input type="text" class="form-control">
-          </div> <!-- form-group end.// -->
+          </div> 
           <div class="form-group col-md-6">
-            <label>Country</label>
+            <!--<label>País</label>
             <select id="inputState" class="form-control">
               <option> Choose...</option>
                 <option value="Nepal">Nepal</option>
@@ -50,31 +50,32 @@
                 <option  value="United States" selected="">United States</option>
                 <option value="India">India</option>
                 <option value="Others">Others</option>
-            </select>
-          </div> <!-- form-group end.// -->
-        </div> <!-- form-row.// -->
+            </select> -->
+            <label>País</label>
+            <input type="text" class="form-control">
+          </div> 
+        </div> 
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label>Create password</label>
+            <label>Crie a senha</label>
               <input class="form-control" type="password" name="password">
-          </div> <!-- form-group end.// --> 
+          </div> 
           <div class="form-group col-md-6">
-            <label>Repeat password</label>
+            <label>Repita a senha</label>
               <input class="form-control" type="password">
-          </div> <!-- form-group end.// -->  
+          </div>  
         </div>
           <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block"> Register  </button>
-          </div> <!-- form-group// -->      
+              <button type="submit" class="btn btn-primary btn-block"> Cadastrar  </button>
+          </div>     
           <div class="form-group"> 
-                <label class="custom-control custom-checkbox"> <input type="checkbox" class="custom-control-input" checked=""> <div class="custom-control-label"> I am agree with <a href="#">terms and contitions</a>  </div> </label>
-            </div> <!-- form-group end.// -->           
+                <label class="custom-control custom-checkbox"> <input type="checkbox" class="custom-control-input" checked=""> <div class="custom-control-label">Eu estou de acordo com os <a href="#">termos e condições</a>  </div> </label>
+            </div>            
       </form>
-    </article><!-- card-body.// -->
-    </div> <!-- card .// -->
-    <p class="text-center mt-4">Have an account? <a href="/auth/login">Log In</a></p>
+    </article>
+    </div> 
+    <p class="text-center mt-4">Já possui conta? <a href="/auth/login">Login</a></p>
     <br><br>
-<!-- ============================ COMPONENT REGISTER  END.// ================================= -->
 
 
 </section>
