--- a/app/general/templates/general/base.html
+++ b/app/general/templates/general/base.html
@@ -6,37 +6,37 @@
 <meta http-equiv="cache-control" content="max-age=604800" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>{{title.capitalize()}} | NepBazar- Ecommerce Site</title>
+<title>{{title.capitalize()}} | Cafeteria Gourmet Mato Dentro</title>
 
 <link href="/static/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <script src="https://kit.fontawesome.com/c96d3752b6.js" crossorigin="anonymous"></script>
-<!-- jQuery -->
+
 <script src="/static/js/jquery-2.0.0.min.js" type="text/javascript"></script>
 
-<!-- Bootstrap4 files-->
+
 <script src="/static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 <link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css"/>
 
-<!-- Font awesome 5 -->
 
 
-<!-- custom style -->
+
+
 <link href="/static/css/ui.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" href="/static/css/style.css" type="text/css" />
 <link href="/static/css/responsive.css" rel="stylesheet" media="only screen and (max-width: 1200px)" />
 
-<!-- custom javascript -->
+
 <script src="/static/js/script.js" type="text/javascript"></script>
 <script src="/static/js/ajax.js" type="text/javascript"></script>
 <script type="text/javascript">
-/// some script
 
-// jquery ready start
+
+
 $(document).ready(function() {
-  // jQuery code
+  
 
 }); 
-// jquery end
+
 </script>
 
 </head>
@@ -52,12 +52,12 @@ $(document).ready(function() {
   <div class="col-lg-2 col-6">
     <a href="/" class="brand-wrap">
       <img class="logo" src="/static/images/logo.png">
-    </a> <!-- brand-wrap.// -->
+    </a> 
   </div>
   <div class="col-lg-6 col-12 col-sm-12">
     <form action="#" class="search">
       <div class="input-group w-100">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Pesquisar">
           <div class="input-group-append">
             <button class="btn btn-primary" type="submit">
               <i class="fa fa-search"></i>
@@ -65,18 +65,18 @@ $(document).ready(function() {
      
           </div>
         </div>
-    </form> <!-- search-wrap .end// -->
+    </form> 
 
-    <!-- Search Results -->
+    
 <div class="search-results mt-2 border w-100 bg-white">
  <div class="container">
 </div>
 </div>	
 
 
-   <!-- End Search results -->
+   
 
-  </div> <!-- col.// -->
+  </div> 
   <div class="col-lg-4 col-sm-6 col-12">
     <div class="widgets-wrap float-md-right">
       <div class="widget-header  mr-3">
@@ -86,11 +86,11 @@ $(document).ready(function() {
       <div class="widget-header icontext">
         <a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-user"></i></a>
         <div class="text">
-          <span class="text-muted">Welcome!</span>
+          <span class="text-muted">Bem vindo!</span>
           {% if not 'email' in session: %}
           <div> 
-            <a href="/auth/login">Sign in</a> |  
-            <a href="/auth/register"> Register</a>
+            <a href="/auth/login">Login</a> |  
+            <a href="/auth/register"> Registre</a>
           </div>
           {%else%}
           <div>
@@ -100,12 +100,12 @@ $(document).ready(function() {
           
         </div>
       </div>
-    </div> <!-- widgets-wrap.// -->
-  </div> <!-- col.// -->
-</div> <!-- row.// -->
-  </div> <!-- container.// -->
-</section> <!-- header-main .// -->
-</header> <!-- section-header.// -->
+    </div> 
+  </div> 
+</div> 
+  </div> 
+</section> 
+</header> 
 
 
 <nav class="navbar navbar-main navbar-expand-lg navbar-light border-bottom">
@@ -118,25 +118,25 @@ $(document).ready(function() {
       <ul class="navbar-nav">
        
         <li class="nav-item">
-          <a class="nav-link" href="/products/fashion">Fashion</a>
+          <a class="nav-link" href="/products/fashion">Café em Pó</a>
         </li>
       
         <li class="nav-item">
-          <a class="nav-link" href="/products/apparels">Apparels</a>
+          <a class="nav-link" href="/products/apparels">Café em Grãos</a>
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="/products/bicycles">Bicycles</a>
+          <a class="nav-link" href="/products/bicycles">Café torrado</a>
         </li>
        
         <li class="nav-item">
-          <a class="nav-link" href="/products/jewelry">Jewelry</a>
+          <a class="nav-link" href="/products/jewelry">Café solúvel</a>
         </li>
       </ul>
-    </div> <!-- collapse .// -->
-  </div> <!-- container .// -->
+    </div> 
+  </div> 
 </nav>
 
-</header> <!-- section-header.// -->
+</header> 
 
 
