--- a/app/products/templates/products/list.html
+++ b/app/products/templates/products/list.html
@@ -4,10 +4,10 @@
   <div class="container">
     <header class="section-heading">
       <h6 class="section-title text-primary">
-        <small>Products/{{title.capitalize()}}</small>
+        <small>Produtos/{{title.capitalize()}}</small>
       </h6>
     </header>
-    <!-- sect-heading -->
+    
 
     <div class="row">
       {% for product in products.items %}
@@ -33,7 +33,7 @@
                   ><i class="fa fa-star"></i>
                 </li>
               </ul>
-              <span class="label-rating text-muted"> 34 reviws</span>
+              <span class="label-rating text-muted"> 30 avaliações</span>
             </div>
             <div class="price mt-1">{{product['price']}}</div>
             <!-- price-wrap.// -->
@@ -51,11 +51,11 @@
   <ul class="pagination pagination-sm justify-content-center">
  {% if products.has_prev %}
     <li class="page-item"> 
-      <a class="page-link" href="?page={{products.prev_num}}">Previous</a>
+      <a class="page-link" href="?page={{products.prev_num}}">Anterior</a>
     </li>
   {% else %}
     <li class="page-item">
-      <a class="page-link btn disabled" href="#">Previous</a>
+      <a class="page-link btn disabled" href="#">Anterior</a>
     </li>
   {% endif %}
 
@@ -81,11 +81,11 @@
 
   {% if products.has_next %}
   <li class="page-item"> 
-    <a class="page-link" href="?page={{products.next_num}}">Next</a>
+    <a class="page-link" href="?page={{products.next_num}}">Próximo</a>
   </li>
   {% else %}
   <li class="page-item">
-    <a class="page-link btn disabled" href="#">Next</a>
+    <a class="page-link btn disabled" href="#">Próximo</a>
   </li>
   {% endif %}
   </ul>
