--- a/app/products/templates/products/view.html
+++ b/app/products/templates/products/view.html
@@ -37,33 +37,38 @@
             <option> 1 </option>
             <option> 2 </option>
             <option> 3 </option>
+            <option> 4 </option>
+            <option> 5 </option>
+            <option> 6 </option>
+            <option> 7 </option>
+
           </select>
         </dd>
       </dl>  
     </div> 
     <div class="col-sm-7">
       <dl class="param param-inline">
-          <dt>Size: </dt>
+          <dt>Tamanho </dt>
           <dd>
             <label class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <span class="form-check-label">SM</span>
+            <span class="form-check-label">0,500gr</span>
           </label>
           <label class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <span class="form-check-label">MD</span>
+            <span class="form-check-label">1kg</span>
           </label>
-          <label class="form-check form-check-inline">
+         <!-- <label class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <span class="form-check-label">XXL</span>
-          </label>
+            <span class="form-check-label">XXL</span> 
+          </label> -->
           </dd>
       </dl>  
     </div> 
   </div> 
   <hr>
-  <a href="#" class="btn btn-lg btn-primary text-uppercase"> Buy now </a>
-  <a href="#" class="btn btn-lg btn-outline-primary text-uppercase"> <i class="fas fa-shopping-cart"></i> Add to cart </a>
+  <a href="#" class="btn btn-lg btn-primary text-uppercase"> Comprar agora </a>
+  <a href="#" class="btn btn-lg btn-outline-primary text-uppercase"> <i class="fas fa-shopping-cart"></i> Adicionar no carrinho </a>
 </article> 
     </aside> 
   </div> 
