--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -6,11 +6,11 @@
         <p class="mb-20">
           <img src="/static/images/404.png" alt="" class="hover-up" />
         </p>
-        <h1 class="display-2 mb-30">Page Not Found</h1>
+        <h1 class="display-2 mb-30">Página não encontrada</h1>
         <p class="font-lg text-grey-700 mb-30">
-          The link you clicked may be broken or the page may have been
-          removed.<br />
-          visit the <a href="/"> <span> Homepage</span></a>
+          O link em que você clicou pode estar quebrado ou a página pode ter sido
+          removido.<br />
+          Visite a <a href="/"> <span> Home</span></a>
         </p>
       </div>
     </div>
