--- a/templates/includes/base.html
+++ b/templates/includes/base.html
@@ -80,7 +80,7 @@ $(document).ready(function() {
   <div class="col-lg-4 col-sm-6 col-12">
     <div class="widgets-wrap float-md-right">
       <div class="widget-header  mr-3">
-        <a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></a>
+        <a href="/carrinho/" class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></a>
         <span class="badge badge-pill badge-danger notify">0</span>
       </div>
       <div class="widget-header icontext">
@@ -89,8 +89,8 @@ $(document).ready(function() {
           <span class="text-muted">Bem vindo!</span>
           {% if not 'email' in session: %}
           <div> 
-            <a href="/auth/login">Login</a> |  
-            <a href="/auth/register"> Registre</a>
+            <a href="/login/">Login</a> |  
+            <a href="/register/"> Registre</a>
           </div>
           {%else%}
           <div>
@@ -118,19 +118,19 @@ $(document).ready(function() {
       <ul class="navbar-nav">
        
         <li class="nav-item">
-          <a class="nav-link" href="/products/fashion">Café em Pó</a>
+          <a class="nav-link" href="/produtos/po/">Café em Pó</a>
         </li>
       
         <li class="nav-item">
-          <a class="nav-link" href="/products/apparels">Café em Grãos</a>
+          <a class="nav-link" href="/produtos/graos/">Café em Grãos</a>
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="/products/bicycles">Café torrado</a>
+          <a class="nav-link" href="/produtos/capsula">Café Cápsula</a>
         </li>
        
         <li class="nav-item">
-          <a class="nav-link" href="/products/jewelry">Café solúvel</a>
+          <a class="nav-link" href="/produtos/soluvel/">Café solúvel</a>
         </li>
       </ul>
     </div> 
