--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -1,29 +1,28 @@
-{%include "base.html" %}
+{% include "includes/base.html" %}
 <section class="section-content padding-y" style="min-height: 84vh">
   
   <div class="card mx-auto" style="max-width: 380px; margin-top: 100px">
     <div class="card-body">
       <h4 class="card-title mb-4">Login</h4>
       <form method="POST">
-        {{ form.csrf_token }}
+
         <a href="#" class="btn btn-facebook btn-block mb-2">
           <i class="fab fa-facebook-f"></i> &nbsp Entre com o Facebook</a
         >
         <a href="#" class="btn btn-google btn-block mb-4">
-          <i class="fab fa-google"></i> &nbsp Entre com o Google</a
-        >
+          <i class="fab fa-google"></i> &nbsp Entre com o Google</a>
 
         <div class="form-group">
-          {{ form.email.label }} {{ form.email(class="form-control")}}
+            <input type="text" name="email" id="email" style="width: 100%;">
         </div>
        
         <div class="form-group">
-          {{ form.password.label}} {{ form.password(class="form-control")}}
+          <input type="password" name="senha" id="senha" style="width: 100%;">
         </div>
         
 
         <div class="form-group">
-          <a href="/auth/forgot_password" class="float-right"
+          <a href="/recuperar_senha/" class="float-right"
             >Esqueceu sua senha?</a
           >
           <label class="float-left custom-control custom-checkbox">
@@ -43,7 +42,7 @@
  
 
   <p class="text-center mt-4">
-    Não possui conta? <a href="/auth/register">Cadastra-se</a>
+    Não possui conta? <a href="/register/">Cadastra-se</a>
   </p>
   <br /><br />
   
