--- a/loja/templates/produtos/view.html
+++ b/loja/templates/produtos/view.html
@@ -68,7 +68,7 @@
   </div> 
   <hr>
   <a href="/carrinho/" class="btn btn-lg btn-primary text-uppercase"> Comprar agora </a>
-  <a href="/carrinho/{{title}}/{{product[0]}}" class="btn btn-lg btn-outline-primary text-uppercase"> <i class="fas fa-shopping-cart"></i> Adicionar no carrinho </a>
+  <a href="#" class="btn btn-lg btn-outline-primary text-uppercase"> <i class="fas fa-shopping-cart"></i> Adicionar no carrinho </a>
 </article> 
     </aside> 
   </div> 
