--- a/loja/templates/produtos/view.html
+++ b/loja/templates/produtos/view.html
@@ -22,7 +22,7 @@
 <p class="price-detail-wrap"> 
   <span class="price h3 text-primary"> 
     <span class="currency">R$ </span><span class="num">{{results[6]}}</span>
-    <input type="hidden" name="valor" value="{{results[6]}}">
+    <input  type="number" name="valor" value="{{results[6]}}" hidden>
   </span> 
 
 </p> 
