--- a/loja/templates/carrinho/carrinho.html
+++ b/loja/templates/carrinho/carrinho.html
@@ -111,12 +111,36 @@
                         </div>
   
                       </form>
-  
+                      {% if not 'name' in session: %}
+                        <hr class="my-4">
+    
+                        <div class="d-flex justify-content-between">
+                          <p class="mb-2">Subtotal</p>
+                          <p class="mb-2">$0.00</p>
+                        </div>
+    
+                        <div class="d-flex justify-content-between">
+                          <p class="mb-2">Shipping</p>
+                          <p class="mb-2">$0.00</p>
+                        </div>
+    
+                        <div class="d-flex justify-content-between mb-4">
+                          <p class="mb-2">Total(Incl. taxes)</p>
+                          <p class="mb-2">$0.00</p>
+                        </div>
+    
+                        <button type="button" class="btn btn-info btn-block btn-lg">
+                          <div class="d-flex justify-content-between">
+                            <span>$0.00</span>
+                            <span>Checkout <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+                          </div>
+                        </button>
+                      {%else%}
                       <hr class="my-4">
-  
+    
                       <div class="d-flex justify-content-between">
                         <p class="mb-2">Subtotal</p>
-                        <p class="mb-2">$4798.00</p>
+                        <p class="mb-2">${{"$%.2f"|format(total)}}</p>
                       </div>
   
                       <div class="d-flex justify-content-between">
@@ -126,16 +150,17 @@
   
                       <div class="d-flex justify-content-between mb-4">
                         <p class="mb-2">Total(Incl. taxes)</p>
-                        <p class="mb-2">$4818.00</p>
+                        <p class="mb-2">${{"$%.2f"|format(total + 20.00)}}</p>
                       </div>
   
                       <button type="button" class="btn btn-info btn-block btn-lg">
                         <div class="d-flex justify-content-between">
-                          <span>$4818.00</span>
+                          <span>${{"$%.2f"|format(total + 20.00)}}</span>
                           <span>Checkout <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                         </div>
                       </button>
-  
+                    {% endif %}
+
                     </div>
                   </div>
   
