--- a/loja/templates/login/signup.html
+++ b/loja/templates/login/signup.html
@@ -10,20 +10,20 @@
   <div class="card mx-auto" style="max-width:520px; margin-top:40px;">
       <article class="card-body">
     <header class="mb-4"><h4 class="card-title">Cadastra-se</h4></header>
-    <form method="POST">
+    <form action="/register/" method="POST">
         <div class="form-row">
           <div class="col form-group">
             <label>Primeiro nome</label>
-              <input type="text" class="form-control" placeholder="" name="fname">
+              <input type="text" class="form-control" placeholder="" name="fname" required>
           </div> 
           <div class="col form-group">
             <label>Último nome</label>
-              <input type="text" class="form-control" placeholder="" name="lname">
+              <input type="text" class="form-control" placeholder="" name="lname" required>
           </div> 
         </div> 
         <div class="form-group">
           <label>Email</label>
-          <input type="email" class="form-control" placeholder="" name="email">
+          <input type="email" class="form-control" placeholder="" name="email" required>
           <small class="form-text text-muted">Nós não compartilhamos os dados com ninguém, em proteção a lei de dados 'LGPD'.</small>
         </div> 
         <div class="form-group">
@@ -42,15 +42,6 @@
             <input type="text" class="form-control">
           </div> 
           <div class="form-group col-md-6">
-            <!--<label>País</label>
-            <select id="inputState" class="form-control">
-              <option> Choose...</option>
-                <option value="Nepal">Nepal</option>
-                <option value="Russia">Russia</option>
-                <option  value="United States" selected="">United States</option>
-                <option value="India">India</option>
-                <option value="Others">Others</option>
-            </select> -->
             <label>País</label>
             <input type="text" class="form-control">
           </div> 
@@ -58,11 +49,11 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Crie a senha</label>
-              <input class="form-control" type="password" name="password">
+              <input class="form-control" type="password" name="password" required>
           </div> 
           <div class="form-group col-md-6">
             <label>Repita a senha</label>
-              <input class="form-control" type="password">
+              <input class="form-control" type="password" required>
           </div>  
         </div>
           <div class="form-group">
@@ -74,7 +65,7 @@
       </form>
     </article>
     </div> 
-    <p class="text-center mt-4">Já possui conta? <a href="/auth/login">Login</a></p>
+    <p class="text-center mt-4">Já possui conta? <a href="/login">Login</a></p>
     <br><br>
 
 
