Commit alterações - ajustado

--- a/loja/templates/produtos/list.html
+++ b/loja/templates/produtos/list.html
@@ -1,5 +1,7 @@
 {% include "includes/base.html" %}
-
+<div class="intro-banner-wrap">
+  <img src="/static/images/banners/bannerFaixa.jpg" class="img-fluid rounded">
+</div>
 <section class="section-content">
   <div class="container">
     <header class="section-heading">
