--- a/loja/static/css/style.css
+++ b/loja/static/css/style.css
@@ -36,22 +36,77 @@
     
 }
 
-.text-primary {
-    color: #814a3b !important;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #814a3b;
-    border-color: #814a3b;
-}
-
-.text-primary {
-    color: #B0842C !important;
-}
-
 @media (min-width: 992px){
 .navbar-expand-lg .navbar-collapse {
     justify-content: center;
 }
+}
+
+.img-fluid {
+    max-width: 100%;
+    height: 100%;
+}
+
+.img_mini{
+    width: 90%;
+    height: 90%;
+}
+
+.widget-header a {
+    color: #80858b;
+}
+
+
+.icontext .text {
+    width: 100%;
+    line-height: 1.2;
+    color: #0095ff;
+}
+
+.text-muted {
+    color: #838181 !important;
+}
+
+
+
+.btn-primary {
+    color: #fff;
+    background-color: #606060;
+    border-color: #606060;
+}
+
+.text-primary {
+    color: #606060 !important;
+}
+
+.navbar{
+	background-color: black !important;
+}
+
+.section-header{
+	background-color: black !important;
+}
+
+.navbar-main .nav-link {
+    font-weight: 400;
+    color: #ffffff;
+}
+
+body {
+    margin: 0;
+    font-family: monospace;
+}
+
+.border-bottom {
+    border-bottom: none !important;
+}
+
+.padding-y-sm {
+    padding-top: 0px;
+}
+
+.container-fluid {
+
+    padding-right: 0px;
+    padding-left: 0px;
 }
