--- a/loja/templates/includes/base.html
+++ b/loja/templates/includes/base.html
@@ -110,7 +110,7 @@ $(document).ready(function() {
 </header> 
 
 
-<nav class="navbar navbar-main navbar-expand-lg navbar-light border-bottom">
+<nav class="navbar navbar-main navbar-expand-lg navbar-dark bg-darkborder-bottom">
   <div class="container">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
