--- a/loja/templates/index/index.html
+++ b/loja/templates/index/index.html
@@ -2,10 +2,10 @@
 
 
 <section class="section-intro padding-y-sm">
-<div class="container">
+<div class="container-fluid">
 
 <div class="intro-banner-wrap">
-  <img src="/static/images/banners/1.jpg" class="img-fluid rounded">
+  <img src="/static/images/banners/banner1.jpg" class="img-fluid rounded">
 </div>
 
 </div> 
@@ -15,8 +15,7 @@
 <div class="container">
 <article class="card card-body">
 
-
-<div class="row">
+  <div class="row">
   <div class="col-md-4">  
     <figure class="item-feature">
       <span class="text-primary"><i class="fa fa-2x fa-truck"></i></span>
@@ -51,6 +50,24 @@
 
 </div> 
 </section>
+
+<!-- ======================================================Mini banners================================================= -->
+<div class="container-fluid d-flex justify-content-center">
+  <div class="row">
+    <div class="col-md-4 minis d-flex justify-content-center">
+      <img class="img_mini" alt="Bootstrap Image Preview" src="/static/images/banners/miniBanner/pc.png" />
+    </div>
+    <div class="col-md-4 minis d-flex justify-content-center">
+      <img class="img_mini" alt="Bootstrap Image Preview" src="/static/images/banners/miniBanner/cadeira.png" />
+    </div>
+    <div class="col-md-4 minis d-flex justify-content-center">
+      <img class="img_mini" alt="Bootstrap Image Preview" src="/static/images/banners/miniBanner/teclado.png" />
+    </div>
+  </div>
+</div>
+
+<!-- ===========================================================fim mini================================================= -->
+
 
 <section class="section-content">
 <div class="container">
@@ -300,73 +317,9 @@
 </div> 
 </section>
 
-
-<!--  
-<section class="section-name bg padding-y-sm">
-<div class="container">
-<header class="section-heading">
-  <h3 class="section-title">Our Brands</h3>
-</header>
-
-<div class="row">
-  <div class="col-md-2 col-6">
-    <figure class="box item-logo">
-      <a href="#"><img src="/static/images/logos/logo1.png"></a>
-      <figcaption class="border-top pt-2">36 Products</figcaption>
-    </figure> 
-  </div> 
-  <div class="col-md-2  col-6">
-    <figure class="box item-logo">
-      <a href="#"><img src="/static/images/logos/logo2.png"></a>
-      <figcaption class="border-top pt-2">980 Products</figcaption>
-    </figure> 
-  </div> 
-  <div class="col-md-2  col-6">
-    <figure class="box item-logo">
-      <a href="#"><img src="/static/images/logos/logo3.png"></a>
-      <figcaption class="border-top pt-2">25 Products</figcaption>
-    </figure> 
-  </div> 
-  <div class="col-md-2  col-6">
-    <figure class="box item-logo">
-      <a href="#"><img src="/static/images/logos/logo4.png"></a>
-      <figcaption class="border-top pt-2">72 Products</figcaption>
-    </figure> 
-  </div> 
-  <div class="col-md-2  col-6">
-    <figure class="box item-logo">
-      <a href="#"><img src="/static/images/logos/logo5.png"></a>
-      <figcaption class="border-top pt-2">41 Products</figcaption>
-    </figure> 
-  </div> 
-  <div class="col-md-2  col-6">
-    <figure class="box item-logo">
-      <a href="#"><img src="/static/images/logos/logo2.png"></a>
-      <figcaption class="border-top pt-2">12 Products</figcaption>
-    </figure> 
-  </div> 
-</div> 
+<div class="intro-banner-wrap">
+  <img src="/static/images/banners/bannerFaixa.jpg" class="img-fluid rounded">
 </div>
-</section> -->
-<!-- ========================= SECTION  END// ========================= -->
-
-
-
-<!--  
-<section class="section-name padding-y">
-<div class="container">
-
-<h3 class="mb-3">Download app demo text</h3>
-
-<a href="#"><img src="/static/images/misc/appstore.png" height="40"></a>
-<a href="#"><img src="/static/images/misc/appstore.png" height="40"></a>
-
-</div>
-</section>
- -->
-
-
-
 
 <!-- ========================= FOOTER ========================= -->
 <footer class="section-footer border-top bg">
