--- a/loja/templates/includes/base.html
+++ b/loja/templates/includes/base.html
@@ -120,19 +120,19 @@ $(document).ready(function() {
       <ul class="navbar-nav">
        
         <li class="nav-item">
-          <a class="nav-link" href="/produtos/po/">Café em Pó</a>
+          <a class="nav-link" href="/produtos/computador/">COMPUTADOR</a>
         </li>
       
         <li class="nav-item">
-          <a class="nav-link" href="/produtos/graos/">Café em Grãos</a>
+          <a class="nav-link" href="/produtos/monitor/">MONITOR</a>
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="/produtos/capsula">Café Cápsula</a>
+          <a class="nav-link" href="/produtos/notebook/">NOTEBOOK</a>
         </li>
        
         <li class="nav-item">
-          <a class="nav-link" href="/produtos/soluvel/">Café solúvel</a>
+          <a class="nav-link" href="/produtos/placavideo/">PLACA DE VIDEO</a>
         </li>
       </ul>
     </div> 
