--- a/loja/templates/carrinho/carrinho.html
+++ b/loja/templates/carrinho/carrinho.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-lg-5">
   
-                  <div class="card bg-primary text-white rounded-3">
+                  <div class="card bg-dark text-white rounded-3">
                     <div class="card-body">
                       <div class="d-flex justify-content-between align-items-center mb-4">
                         <h5 class="mb-0">Dados do Cartão</h5>
