Commit ultimas modificações.

--- a/loja/templates/index/index2.html
+++ b/loja/templates/index/index2.html
@@ -80,9 +80,9 @@
 <div class="row">
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/1.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/1.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">PC Gamer Concórdia i7-10700F, Geforce RTX 3060 12GB, 16GB RAM, SSD 500, Avalanche Preto - 33292
+        <a href="#" class="title">CAFÉ UTAM CREMA EM GRÃOS 1 KG
         </a>
         
         <div class="rating-wrap">
@@ -96,15 +96,15 @@
           </ul>
           <span class="label-rating text-muted"> 30 avaliações</span>
         </div>
-        <div class="price mt-1">R$7499,99</div> 
+        <div class="price mt-1">R$47,50</div> 
       </figcaption>
     </div>
   </div> 
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/14.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/14.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">COMPUTADOR MANCER GAMER LORRIDE, AMD RYZEN 3 3200G, 16GB DDR4, SSD 240GB
+        <a href="#" class="title">CAFÉ SOLÚVEL UTAM 500G
         </a>
         
         <div class="rating-wrap">
@@ -118,15 +118,15 @@
           </ul>
           <span class="label-rating text-muted"> 32 avaliações</span>
         </div>
-        <div class="price mt-1">R$2067,99</div> 
+        <div class="price mt-1">R$59,90</div> 
       </figcaption>
     </div>
   </div> 
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/5.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/5.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">Monitor Gamer Samsung Odyssey G5 34' VA, Curvo, Wide, 165 Hz, 2K QHD, 1ms, FreeSync Premium, HDR10, HDMI/DisplayPort - LC34G55TWWLXZD 
+        <a href="#" class="title">UTAM UNO ESPRESSO ORGÂNICO 10 CÁPSULAS 
         </a>
         
         <div class="rating-wrap">
@@ -140,15 +140,15 @@
           </ul>
           <span class="label-rating text-muted"> 28 avaliações</span>
         </div>
-        <div class="price mt-1">R$3599,99</div> 
+        <div class="price mt-1">R$20,90</div> 
       </figcaption>
     </div>
   </div> 
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/17.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/17.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">Placa de Vídeo RTX 3060 VISION OC 12G Gigabyte GeForce, 12GB GDDR6, RGB Fusion, Ray Tracing, Metal Back Plate - GV-N3060VISION OC-12GD </a>
+        <a href="#" class="title">CAFÉ UTAM VP 250G </a>
         
         <div class="rating-wrap">
           <ul class="rating-stars">
@@ -159,9 +159,9 @@
               <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 
             </li>
           </ul>
-          <span class="label-rating text-muted"> 34 avaliações</span>
+          <span class="label-rating text-muted"> 34 reviws</span>
         </div>
-        <div class="price mt-1">R$2499,99</div> 
+        <div class="price mt-1">$179.00</div> 
       </figcaption>
     </div>
   </div> 
@@ -180,9 +180,9 @@
 <div class="row">
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/10.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/10.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">MONITOR GAMER COOLER MASTER GM27-FQS ARGB THE 30TH ANNIVERSARY EDITION, 27 POL IPS, QHD, 1MS, 165HZ, FREESYNC PREMIUM, G-SYNC, HDMI/DP, CMI-GM27-FQSA30TH </a>
+        <a href="#" class="title">Cápsula de Cappuccino Classic TRES 3 Corações </a>
         
         <div class="rating-wrap">
           <ul class="rating-stars">
@@ -195,16 +195,15 @@
           </ul>
           <span class="label-rating text-muted"> 32 avaliações</span>
         </div>
-        <div class="price mt-1">R$2799,99</div>
+        <div class="price mt-1">R$18,98</div>
       </figcaption>
     </div>
   </div> 
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/9.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/9.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">PLACA DE VIDEO GALAX GEFORCE GTX 1630 EX 1-CLICK OC, 4GB, GDDR6, 64-BIT, 63NQL4HP66EX
-        </a>
+        <a href="#" class="title">Café Solúvel Pilão Vidro        </a>
         
         <div class="rating-wrap">
           <ul class="rating-stars">
@@ -217,15 +216,15 @@
           </ul>
           <span class="label-rating text-muted"> 33 avaliações</span>
         </div>
-        <div class="price mt-1">R$1069,99</div> 
+        <div class="price mt-1">R$19,90</div> 
       </figcaption>
     </div>
   </div> 
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/13.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/13.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">PC Gamer Fácil Intel Core I7, 16GB RAM, Nvidia GeForce Gtx 1050ti 4GB, SSD 480GB, Fonte 500w, Windows 10, Preto</a>
+        <a href="#" class="title">Café Torrado e Moído Cerrado Mineiro Rituais 3 Corações</a>
         
         <div class="rating-wrap">
           <ul class="rating-stars">
@@ -238,15 +237,15 @@
           </ul>
           <span class="label-rating text-muted"> 31 avaliações</span>
         </div>
-        <div class="price mt-1">R$3248,10</div> 
+        <div class="price mt-1">R$21,99</div> 
       </figcaption>
     </div>
   </div> 
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/7.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/7.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">NOTEBOOK GAMER GIGABYTE G5 GD, INTEL I5-11400H, 15.6, FHD 144HZ, 16GB DDR4, SSD 512GB M.2, RTX 3050 4GB, GD-51BR123SD</a>
+        <a href="#" class="title">Kit 240 Cápsulas Café Pilão Intenso 8</a>
         
         <div class="rating-wrap">
           <ul class="rating-stars">
@@ -259,7 +258,7 @@
           </ul>
           <span class="label-rating text-muted"> 38 avaliações</span>
         </div>
-        <div class="price mt-1">R$8899,00</div> 
+        <div class="price mt-1">R$499.90</div> 
       </figcaption>
     </div>
   </div> 
@@ -279,37 +278,37 @@
 <div class="row">
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/15.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/15.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">PLACA DE VIDEO GALAX GEFORCE RTX 3050 1-CLICK OC V2, 8GB, GDDR6, 128-BIT, 35NSL8MD5YBP</a>
-        <div class="price mt-1">R$1899,99</div> 
+        <a href="#" class="title">Café Solúvel Pilão Cafeteria 70g</a>
+        <div class="price mt-1">R$14,02</div> 
       </figcaption>
     </div>
   </div> 
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/18.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/18.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">NOTEBOOK GAMER MSI BRAVO 15, AMD RYZEN 5 5600H, 15.6, FHD, 16GB DDR4, SSD 512GB M.2, RX 5500M 4GB, BRAVO15B5DD-243US</a>
-        <div class="price mt-1">R$9399,00</div> 
+        <a href="#" class="title">Café Solúvel Em Pó América 510g</a>
+        <div class="price mt-1">R$53,13</div> 
       </figcaption>
     </div>
   </div> 
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/21.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/21.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">Monitor Gamer Husky Tempest 34' VA, Ultrawide, 144 Hz, 2K QHD, 1ms, Adaptive Sync, 95% sRGB, HDMI/DisplayPort, Ajuste de Altura, Som - HGMT005</a>
-        <div class="price mt-1">R$1999,99</div> 
+        <a href="#" class="title">Café Torrado e Moído Cerrado Mineiro Rituais 3 Corações Pacote 250g</a>
+        <div class="price mt-1">R$21,99</div> 
       </figcaption>
     </div>
   </div>
   <div class="col-md-3">
     <div href="#" class="card card-product-grid">
-      <a href="#" class="img-wrap"> <img src="/static/images/items/19.jpg"> </a>
+      <a href="#" class="img-wrap"> <img src="/static/images/items/19.png"> </a>
       <figcaption class="info-wrap">
-        <a href="#" class="title">Computador Skytech Gaming Chronos Mini Desktop Gaming, Intel Core I5 10thGen, RAM 16GB, SSD 500GB, Windows 10 Home, Preto</a>
-        <div class="price mt-1">R$12862,99</div> 
+        <a href="#" class="title">Café Biagini 500GR</a>
+        <div class="price mt-1">R$17,80</div> 
       </figcaption>
     </div>
   </div> 
@@ -330,11 +329,11 @@
         <aside class="col-md col-6">
           <h6 class="title">Marcas</h6>
           <ul class="list-unstyled">
-            <li> <a href="#">Galax</a></li>
-            <li> <a href="#">Gigabyte</a></li>
-            <li> <a href="#">Pichau</a></li>
-            <li> <a href="#">Mancer</a></li>
-            <li> <a href="#">Duex</a></li>
+            <li> <a href="#">Utan</a></li>
+            <li> <a href="#">Santa Alcina</a></li>
+            <li> <a href="#">Pilão</a></li>
+            <li> <a href="#">Santa Clara</a></li>
+            <li> <a href="#">Três Corações</a></li>
           </ul>
         </aside>
         <aside class="col-md col-6">
@@ -379,12 +378,12 @@
 
     <section class="footer-bottom row">
       <div class="col-md-2">
-        <p class="text-muted"> 2022 infogames </p>
+        <p class="text-muted"> 2022 Matro Dentro Gourmert </p>
       </div>
       <div class="col-md-8 text-md-center">
-        <span  class="px-2">contato@infogames.com.br</span>
-        <span  class="px-2">(35) 9 9999-8888</span>
-        <span  class="px-2">InfoGames</span>
+        <span  class="px-2">contato@matrodentrogoumert.com.br</span>
+        <span  class="px-2">(35) 9 9999-9999</span>
+        <span  class="px-2">Fazenda Mato Dentro</span>
       </div>
       <div class="col-md-2 text-md-right text-muted">
         <i class="fab fa-lg fa-cc-visa"></i>
